# turn-proxy-server

./: Cargo.toml  Dockerfile  flake.nix
.github/workflows/: docker.yml
client/: Cargo.toml  PKGBUILD
client/src/: main.rs
client/src/configuration/: init_configuration.rs
client/src/inbound/: dns.rs  mod.rs
client/src/proxy_process/: listening.rs
lib/: Cargo.toml
lib/src/: balancer.rs  lib.rs
lib/src/proxy/: flow.rs
server/: Cargo.toml  PKGBUILD  README.md
server/nix/: module.nix
server/src/: main.rs
server/src/config/: dns.rs  init_configuration.rs  mod.rs
server/src/proxy_process/: listening.rs
