[workspace]
members = ["server", "client", "lib"]
resolver = "2"

[workspace.package]
version = "1.0.20"
edition = "2024"
license = "AGPL-3"
repository = "https://github.com/Urtyom-Alyanov/turn-proxy"
authors = ["Urtyom Alyanov"]

[workspace.dependencies]
rcgen = "0.13.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.4"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
dtls = { version = "0.17.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
webrtc-util = { version = "0.17.1", features = ["conn"] }
tokio-util = "0.7.18"
turn-proxy-lib = { path = "lib" }
futures-util = "0.3.32"
rustls = { version = "0.23.37", default-features = false, features = ["aws-lc-rs", "logging"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["aws-lc-rs", "logging"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls-no-provider", "form", "hickory-dns", "stream", "gzip", "cookies"] }
hickory-resolver = "0.25.2"

[profile.dist]
inherits = "release"
lto = "thin"
