[package]
name = "turn-proxy-client"
version.workspace = true
description = "DTLS proxy client for TURN relay"
license = "MPL-2"
edition.workspace = true
authors.workspace = true

[dependencies]
rcgen.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tokio.workspace = true
toml.workspace = true
dtls.workspace = true
serde.workspace = true
clap.workspace = true
anyhow.workspace = true
webrtc-util.workspace = true
tokio-util.workspace = true
turn-proxy-lib.workspace = true
rustls.workspace = true
reqwest.workspace = true
hickory-resolver.workspace = true

turn = "0.17.1"
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["v4"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
async-trait = "0.1.89"
network-interface = "2.0.5"
net-route = "0.4.6"
axum = { version = "0.8.8", features = ["macros"] }
open = "5.3.3"
lazy_static = "1.5.0"
regex = "1.12.3"
hex = "0.4.3"
sha2 = "0.11.0"
urlencoding = "2.1.3"
rand = "0.10.0"
base64 = "0.22.1"
oneshot = "0.2.1"
rayon = "1.11.0"
image = "0.25.10"

[package.metadata.deb]
maintainer = "Urtyom Alyanov <urtyomalyanov@gmail.com>"
maintainer-scripts = "dist-specific/deb"
copyright = "2026, Urtyom Alyanov"
license-file = ["LICENSE", "4"]
extended-description = """
DTLS proxy client designed to relay UDP traffic through TURN servers
to bypass restrictive networks or analyze video call traffic.
"""
assets = [
    [
        "target/release/turn-proxy-client",
        "/usr/bin/turn-proxy-client",
        "755",
    ],
    [
        "services/systemd/turn-proxy-client.service",
        "/lib/systemd/system/turn-proxy-client.service",
        "644",
    ],
    [
        "example.toml",
        "/etc/turn-proxy/client/config.toml",
        "644",
    ],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/turn-proxy-client", dest = "/usr/bin/turn-proxy-client", mode = "755" },
    { source = "services/systemd/turn-proxy-client.service", dest = "/usr/lib/systemd/system/turn-proxy-client.service", mode = "644" },
    { source = "example.toml", dest = "/etc/turn-proxy/client/config.toml", mode = "644" },
]
post_install = """
systemctl daemon-reload
"""
pre_uninstall = """
systemctl stop turn-proxy-client || true
systemctl disable turn-proxy-client || true
"""
