[package]
name = "turn-proxy-server"
description = "DTLS proxy server for TURN relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rcgen.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tokio.workspace = true
toml.workspace = true
dtls.workspace = true
serde.workspace = true
clap.workspace = true
anyhow.workspace = true
webrtc-util.workspace = true
tokio-util.workspace = true
turn-proxy-lib.workspace = true
rustls.workspace = true
hickory-resolver.workspace = true
reqwest.workspace = true

[package.metadata.deb]
maintainer = "Urtyom Alyanov <urtyomalyanov@gmail.com>"
maintainer-scripts = "dist-specific/deb"
conf-files = [
    "/etc/turn-proxy/server/config.toml"
]
copyright = "2026, Urtyom Alyanov"
license-file = ["LICENSE", "4"]
extended-description = """
DTLS proxy server designed to relay UDP traffic through TURN servers
to bypass restrictive networks or analyze video call traffic.
"""
assets = [
    [
        "target/release/turn-proxy-server",
        "/usr/local/bin/turn-proxy-server",
        "755",
    ],
    [
        "services/systemd/turn-proxy-server.service",
        "/lib/systemd/system/turn-proxy-server.service",
        "644",
    ],
    [
        "example.toml",
        "/etc/turn-proxy/server/config.toml",
        "644",
    ],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/turn-proxy-server", dest = "/usr/local/bin/turn-proxy-server", mode = "755" },
    { source = "services/systemd/turn-proxy-server.service", dest = "/usr/lib/systemd/system/turn-proxy-server.service", mode = "644" },
    { source = "example.toml", dest = "/etc/turn-proxy/server/config.toml", mode = "644", config = true },
]
post_install = """
systemctl daemon-reload
systemctl try-restart turn-proxy-server
"""
pre_uninstall = """
systemctl stop turn-proxy-server || true
systemctl disable turn-proxy-server || true
"""
